--- a/Test/src/main/resources/templates/Role/create.html
+++ b/Test/src/main/resources/templates/Role/create.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Role Form</title>
@@ -10,7 +11,7 @@
 <div class="container mt-5">
     <h2 class="mb-4">Create Role</h2>
 
-    <!--/*@thymesVar id="role" type="org.example.test.Entities.Role"*/-->
+
     <form action="#" th:action="'/roles/create'" th:object="${role}" method="post">
         <div class="form-group row">
             <label for="role_name" class="col-sm-2 col-form-label">Role name</label>
