--- a/Test/src/main/resources/templates/Role/index.html
+++ b/Test/src/main/resources/templates/Role/index.html
@@ -15,6 +15,7 @@
             <th>STT</th>
             <th>ID</th>
             <th>Role</th>
+            <th>Action</th>
         </tr>
         </thead>
         <tbody>
