--- a/Test/src/main/resources/templates/User/create.html
+++ b/Test/src/main/resources/templates/User/create.html
@@ -10,7 +10,7 @@
 <div class="container mt-5">
     <h2 class="mb-4">Create User</h2>
 
-    <!--/*@thymesVar id="user" type="org.example.test.Entities.User"*/-->
+
     <form action="#" th:action="'/users/create'" th:object="${user}" method="post">
         <div class="form-group row">
             <label for="userName" class="col-sm-2 col-form-label">Username</label>
@@ -40,6 +40,17 @@
             <label for="password" class="col-sm-2 col-form-label">Password</label>
             <div class="col-sm-10">
                 <input type="password" class="form-control" id="password" th:field="*{password}">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="role" class="col-sm-2 col-form-label">role</label>
+            <div class="col-sm-10">
+                <select id="role"  th:field="*{role}">
+                    <option th:each="r : ${roles}"
+                            th:value="${r.role_id}"
+                            th:text="${r.role_name}">
+                    </option>
+                </select>
             </div>
         </div>
         <div class="form-group row">
