--- a/Test/src/main/resources/templates/User/index.html
+++ b/Test/src/main/resources/templates/User/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h2 class="mb-4">Student List</h2>
+    <h2 class="mb-4">User List</h2>
     <table class="table table-striped table-bordered">
         <thead class="thead-dark">
         <tr>
@@ -17,18 +17,19 @@
             <th>UserName</th>
             <th>Name</th>
             <th>Email</th>
+            <th>Role</th>
             <th>IsDeleted</th>
+            <th>Action</th>
         </tr>
         </thead>
         <tbody>
-
-        <!--/*@thymesVar id="users" type="java.util.List<org.example.test.Entities.User> Users"*/-->
         <tr th:each="user, userStat : ${users}">
             <td th:text="${userStat.index + 1}"></td>
             <td th:text="${user.id}"></td>
             <td th:text="${user.userName}"></td>
             <td th:text="|${user.lastName} ${user.firstName}|"></td>
             <td th:text="${user.email}"></td>
+            <td th:text="${user.role.role_name}"></td>
             <td th:text="${user.isDeleted}"></td>
             <td>
                 <a class="btn btn-primary btn-sm" th:href="'/users/view/'+${user.id}">View</a>
